test/org/midica/testfiles/failing/eff-flow-missing-dot-1.midica
INCLUDE inc/instruments.midica


0: vol.wait()
0: wait().set(50)

